secon commit filters

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <div class="card__image-group">
                 <span class="card__watermark">&lt;/GIT&gt;</span>
                 <img
-                  class="card__image filter-coloring"
+                  class="card__image filter-what-if"
                   loading="lazy"
                   src="images/img-what-if.gif"
                   alt="Сеймур из Симпсонов задумывается над тем, что если..."
@@ -272,7 +272,7 @@
               <div class="card__image-group">
                 <span class="card__watermark">&lt;/PRETTIER&gt;</span>
                 <img
-                  class="card__image filter-sepia"
+                  class="card__image filter-ideal-css"
                   loading="lazy"
                   src="images/img-ideal-css.gif"
                   alt="Питер Гриффин не может аккуратно поднять жалюзи."
@@ -340,7 +340,7 @@
               <div class="card__image-group">
                 <span class="card__watermark">&lt;CSS&gt;</span>
                 <img
-                  class="card__image filter-vampire"
+                  class="card__image filter-who-is-the-closest"
                   loading="lazy"
                   src="images/img-whos-with-you.gif"
                   alt="Как указано в пророчестве."
@@ -410,7 +410,7 @@
               <div class="card__image-group">
                 <span class="card__watermark">&lt;/PUG&gt;</span>
                 <img
-                  class="card__image filter-saturate"
+                  class="card__image filter-black-and-white"
                   loading="lazy"
                   src="images/img-workaround-strategies.gif"
                   alt="Похоже у тебя есть новый план."
