third commit bugfix

--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
-
     <link rel="icon" href="svg/favicon.ico" sizes="any" />
     <link rel="icon" href="svg/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="svg/favicon.png" />
-
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
-
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page-container">
@@ -175,7 +172,6 @@
                           fill="none"
                           d="M12 9H9v3h3V9Zm3 3h-3v3h3v-3Zm3-3h-3v3h3V9Zm-6 6H9v3h3v-3Zm3 0h-3v3h3v-3Zm0 3h-3v3h3v-3Zm3-6h-3v3h3v-3Zm0 9h-3v3h3v-3Zm0-3h-3v3h3v-3Zm9-9h3v3h-3V9Zm-3 0h3v3h-3V9Zm3 3h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm-3-3h3v3h-3V9Zm6 6h3v3h-3v-3Zm-3 0h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-3-6h3v3h-3v-3Zm0 9h3v3h-3v-3Zm0-3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0 3h-3v3h3v-3Z"
                         />
-
                         <path
                           class="core"
                           fill="none"
@@ -239,7 +235,6 @@
                           fill="var(--accent-color)"
                           d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"
                         />
-
                         <path
                           class="main-body"
                           fill="none"
@@ -424,8 +419,7 @@
                     Значит, пришло время посмотреть на задачу под другим углом.
                   </p>
                   <p class="card__parapgraph">
-                    Познакомился с компонентным подходом, на данном проекте
-                    использовать его еще опасаюсь, но вещь полезная.
+                    Познакомился с компонентным подходом, вещь полезная.
                   </p>
                 </div>
                 <div class="card__interaction-field">
@@ -444,7 +438,6 @@
                           fill="var(--accent-color)"
                           d="M12 6H9v3h3V6Zm3 0h-3v3h3V6ZM9 9H6v3h3V9Zm0 3H6v3h3v-3Zm0 3H6v3h3v-3Zm9-9h-3v3h3V6Zm-6 12H9v3h3v-3Zm3 3h-3v3h3v-3Zm3 3h-3v3h3v-3Zm9-18h3v3h-3V6Zm-3 0h3v3h-3V6Zm6 3h3v3h-3V9Zm0 3h3v3h-3v-3Zm0 3h3v3h-3v-3Zm-9-9h3v3h-3V6Zm6 12h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm-3 3h3v3h-3v-3Zm0 3h-3v3h3v-3Zm0-18h-3v3h3V9Z"
                         />
-
                         <path
                           class="main-body"
                           fill="none"
@@ -563,8 +556,8 @@
                   </p>
                   <p class="card__parapgraph">
                     Хотя я уже изучал JavaScript на другом курсе, уверен, что в
-                    Яндексе он откроется для меня с новой стороны. Хочется лучше
-                    разобраться в клиентском рендеринге (CSR)...
+                    Яндексе он откроется для меня с новой стороны. Хочется
+                    получше разобраться в клиентском рендеринге (CSR)...
                   </p>
                 </div>
                 <div class="card__interaction-field">
