sixth commit optimization

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
+                    Это было самое начало пути. На этом этапе важно было
+                    проникнуться основами и настроиться на учёбу. И, возможно,
+                    подумать, как новые знания могут повлиять на ваше будущее.
                   </p>
                   <p class="card__parapgraph">
                     Только через семь месяцев погружения в изучение фронтенда я
@@ -135,7 +137,12 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?
+                    На первых этапах мы работали со страхами и сомнениями,
+                    которые часто испытывают новички. Один из них — страх перед
+                    чистым листом. Это, конечно же, намного сложнее, чем боязнь
+                    куска бумаги. Часто за этим ощущением скрываются более
+                    глубокие вопросы: с чего начать? а вдруг будет слишком
+                    сложно? что, если я не справлюсь?
                   </p>
                   <p class="card__parapgraph">
                     Я думал, что знаю основы CSS, но недавно обнаружил
@@ -201,7 +208,10 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
+                    Первый проект — позади! Но это всё ещё самое начало пути.
+                    Радость могла быстро померкнуть и смениться ожиданием
+                    провала. Или вы, наоборот, могли вдохновиться успехами и
+                    поверить в себя.
                   </p>
                   <p class="card__parapgraph">
                     Git отлично подходит для командной работы, особенно с
@@ -266,7 +276,11 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
+                    На этом этапе вы уже достаточно разбирались в основах
+                    вёрстки, чтобы понять, как много ещё впереди. Вы могли
+                    попытаться погнаться за идеалом и понять, что он недостижим.
+                    А, может, вы вовсе и не подвержены перфекционизму и вместо
+                    того, чтобы сделать идеально, старались просто сделать.
                   </p>
                   <p class="card__parapgraph">
                     Научился вставлять видеоролики и редактировать их в
@@ -330,7 +344,12 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
+                    Всё это время вы были не одиноки (хотя, возможно, иногда и
+                    чувствовали, что одни против целого мира). Вас окружали
+                    одногруппники, команда сопровождения и просто близкие люди,
+                    которым можно пожаловаться, если очередной макет просто так
+                    не поддавался. Осваивать что-то новое легче, когда рядом
+                    есть единомышленники, не правда ли?
                   </p>
                   <p class="card__parapgraph">
                     Настоящим открытием для меня стало то, что в CSS существуют
@@ -395,7 +414,9 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.
+                    На этом курсе вы постоянно решали разные задачи. В какой-то
+                    момент вам могло показаться, что решения просто иссякли.
+                    Значит, пришло время посмотреть на задачу под другим углом.
                   </p>
                   <p class="card__parapgraph">
                     Познакомился с компонентным подходом, вещь полезная.
@@ -458,7 +479,11 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.
+                    Во время учёбы часто возникает чувство, когда не знаешь, за
+                    что хвататься. Вроде и проектную пора сдавать, и задачи
+                    хочется порешать, и в теории получше разобраться, и жизнь не
+                    забыть пожить. В такие моменты очень нужна концентрация.
+                    Вспомните, откуда вы её черпали.
                   </p>
                   <p class="card__parapgraph">
                     Препроцессоры, CSS, SASS, LESS. Тысячи их...
@@ -521,7 +546,13 @@
               <div class="card__content">
                 <div class="card__description">
                   <p class="card__parapgraph">
-                    Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.
+                    Сейчас вы уже очень много знаете о вёрстке. Но это только
+                    начало. Во-первых, впереди ещё много материала про
+                    «красотищу». Во-вторых, с окончанием курса учёба не
+                    заканчивается. Вёрстка — это целый мир. И этот мир постоянно
+                    меняется. Познать его полностью не получится, но это тот
+                    случай, когда важен сам процесс познания. Ведь часто путь —
+                    и есть результат.
                   </p>
                   <p class="card__parapgraph">
                     Хотя я уже изучал JavaScript на другом курсе, уверен, что в
