--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
   </head>
   <body class="page-container">
     <header class="header wrapper">
-      <h1 class="header__title">
-        &lt;/HTML&gt;<span class="header__caption">закрывающий тег</span>
-      </h1>
+      <div class="header__title">&lt;/Html&gt;</div>
+      <h1 class="header__caption">Закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -49,16 +48,15 @@
     </header>
     <main class="wrapper">
       <section class="cards">
-        <h2 class="visually-hidden">Спринты, уходящего года</h2>
         <ul class="cards__list">
           <!-- 0 спринт. Подготовка к работе -->
           <li class="cards-list__item">
             <article class="cards__item card">
-              <h3 class="card__title">
+              <h2 class="card__title">
                 Фритрек и нулевой спринт: Подготовка к работе
-              </h3>
+              </h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;/HTML&gt;</span>
+                <span class="card__watermark">&lt;/Html&gt;</span>
                 <img
                   class="card__image filter-dark"
                   loading="lazy"
@@ -80,7 +78,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button class="card__icon-button" type="button">
                     <svg
                       width="39"
                       height="36"
@@ -114,7 +112,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -124,9 +122,9 @@
           <!-- 1 спринт. TABULA RASA-->
           <li class="cards__list-item">
             <article class="cards__item card">
-              <h3 class="card__title">1 спринт: Я — чистый лист</h3>
+              <h2 class="card__title">1 спринт: Я — чистый лист</h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;CSS&gt;</span>
+                <span class="card__watermark">&lt;Css&gt;</span>
                 <img
                   class="card__image filter-light"
                   loading="lazy"
@@ -185,7 +183,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -195,9 +193,9 @@
           <!-- 1 спринт. BUT WHAT IF?-->
           <li class="cards__list-item">
             <article class="cards__item card">
-              <h3 class="card__title">1 спринт: А если не получится?</h3>
+              <h2 class="card__title">1 спринт: А если не получится?</h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;/GIT&gt;</span>
+                <span class="card__watermark">&lt;/git&gt;</span>
                 <img
                   class="card__image filter-what-if"
                   loading="lazy"
@@ -253,7 +251,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -263,9 +261,9 @@
           <!-- 2 спринт. Погоня за идеалом -->
           <li class="cards__list-item">
             <article class="cards__item card">
-              <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
+              <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;/PRETTIER&gt;</span>
+                <span class="card__watermark">&lt;/Prettier&gt;</span>
                 <img
                   class="card__image filter-ideal-css"
                   loading="lazy"
@@ -288,7 +286,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button class="card__icon-button" type="button">
                     <svg
                       width="39"
                       height="36"
@@ -321,7 +319,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -331,9 +329,9 @@
           <!-- 2 спринт. О тех, кто рядом. -->
           <li class="cards__list-item">
             <article class="cards__item card">
-              <h3 class="card__title">2 спринт: О тех, кто рядом</h3>
+              <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;CSS&gt;</span>
+                <span class="card__watermark">&lt;Css&gt;</span>
                 <img
                   class="card__image filter-who-is-the-closest"
                   loading="lazy"
@@ -358,7 +356,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button class="card__icon-button" type="button">
                     <svg
                       width="39"
                       height="36"
@@ -391,7 +389,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -401,9 +399,9 @@
           <!-- 3 спринт. New plan and workaround strategies-->
           <li class="cards__list-item">
             <article class="cards__item card">
-              <h3 class="card__title">3 спринт: Обходные стратегии</h3>
+              <h2 class="card__title">3 спринт: Обходные стратегии</h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;/PUG&gt;</span>
+                <span class="card__watermark">&lt;/Pug&gt;</span>
                 <img
                   class="card__image filter-black-and-white"
                   loading="lazy"
@@ -456,7 +454,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -466,9 +464,9 @@
           <!-- 3 спринт. Когда опускаются руки -->
           <li class="cards__list-item">
             <article class="cards__item card">
-              <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
+              <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;/CSS&gt;</span>
+                <span class="card__watermark">&lt;/Css&gt;</span>
                 <img
                   class="card__image filter-low-contrast"
                   loading="lazy"
@@ -523,7 +521,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -533,9 +531,9 @@
           <!-- 3 спринт. Сейчас я здесь-->
           <li class="cards__list-item">
             <article class="cards__item card">
-              <h3 class="card__title">«Сейчас я здесь»</h3>
+              <h2 class="card__title">«Сейчас я здесь»</h2>
               <div class="card__image-group">
-                <span class="card__watermark">&lt;/HTML&gt;</span>
+                <span class="card__watermark">&lt;/Html&gt;</span>
                 <img
                   class="card__image filter-invert"
                   loading="lazy"
@@ -594,7 +592,7 @@
                       />
                     </svg>
                   </button>
-                  <button class="button card__like-button">
+                  <button class="button card__like-button" type="button">
                     <span class="button__text">Like</span>
                   </button>
                 </div>
@@ -603,53 +601,52 @@
           </li>
         </ul>
       </section>
-    </main>
-    <!-- ФУТЕР-->
-    <footer class="footer container">
-      <!-- Кнопка для сохранения, активирует модальное окно -->
-      <button
-        class="button button_save"
-        type="button"
-        onclick="window['dialog-id'].showModal()"
-        aria-controls="dialog-id"
-      >
-        <!-- Вызов модального окна по ID -->
-        <svg
-          class="button__inner-icon"
-          viewBox="0 0 21 21"
-          width="21"
-          height="21"
+      <section class="section__save container">
+        <!-- Кнопка для сохранения, активирует модальное окно -->
+        <button
+          class="button button_save"
+          type="button"
+          onclick="window['dialog-id'].showModal()"
+          aria-controls="dialog-id"
         >
-          <use href="svg/floppy.svg#floppy" />
-          <!-- Ссылка на часть SVG файла -->
-        </svg>
-        <span class="button__text"> Сохранить на память </span>
-        <!-- Текст кнопки -->
-      </button>
-      <!-- Модальное окно с информацией -->
-      <dialog class="dialog" id="dialog-id">
-        <div class="dialog__heading">
+          <!-- Вызов модального окна по ID -->
           <svg
-            class="button__inner-icon dialog__icon"
+            class="button__inner-icon"
             viewBox="0 0 21 21"
-            width="39"
-            height="39"
+            width="21"
+            height="21"
           >
             <use href="svg/floppy.svg#floppy" />
+            <!-- Ссылка на часть SVG файла -->
           </svg>
-          <h2 class="dialog__title">Вставьте дискету, чтобы продолжить</h2>
-          <!-- Заголовок модального окна -->
-        </div>
-        <!-- Кнопка закрытия модального окна -->
-        <button
-          class="button dialog__button"
-          type="button"
-          onclick="window['dialog-id'].close()"
-        >
-          ОК
+          <span class="button__text"> Сохранить на память </span>
+          <!-- Текст кнопки -->
         </button>
-      </dialog>
-    </footer>
+        <!-- Модальное окно с информацией -->
+        <dialog class="dialog" id="dialog-id">
+          <div class="dialog__heading">
+            <svg
+              class="button__inner-icon dialog__icon"
+              viewBox="0 0 21 21"
+              width="39"
+              height="39"
+            >
+              <use href="svg/floppy.svg#floppy" />
+            </svg>
+            <h2 class="dialog__title">Вставьте дискету, чтобы продолжить</h2>
+            <!-- Заголовок модального окна -->
+          </div>
+          <!-- Кнопка закрытия модального окна -->
+          <button
+            class="button dialog__button"
+            type="button"
+            onclick="window['dialog-id'].close()"
+          >
+            ОК
+          </button>
+        </dialog>
+      </section>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
