--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page-container">
     <header class="header wrapper">
-      <div class="header__title">&lt;/Html&gt;</div>
+      <span class="header__title">&lt;/Html&gt;</span>
       <h1 class="header__caption">Закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
