--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta name="color-scheme" content="light dark" />
     <title>Закрывающий тег</title>
     <link rel="icon" href="svg/favicon.ico" sizes="any" />
     <link rel="icon" href="svg/favicon.svg" type="image/svg+xml" />
@@ -18,7 +18,7 @@
   </head>
   <body class="page-container">
     <header class="header wrapper">
-      <span class="header__title">&lt;/Html&gt;</span>
+      <a class="header__title" tabindex="-1">&lt;/Html&gt;</a>
       <h1 class="header__caption">Закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
