--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -218,7 +218,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -421,7 +421,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -488,7 +488,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
@@ -559,7 +559,7 @@
                   </p>
                 </div>
                 <div class="card__interaction-field">
-                  <button class="card__icon-button">
+                  <button type="button" class="card__icon-button">
                     <svg
                       width="39"
                       height="36"
